Fix height on iOS
See: https://medium.com/quick-code/100vh-problem-with-ios-safari-92ab23c852a8

--- a/packages/markdown/src/index.css
+++ b/packages/markdown/src/index.css
@@ -379,6 +379,7 @@
   margin-left: 4px;
   background: var(--color-nav);
   border: none;
+  padding: 0;
   border-radius: 4px;
   opacity: 0.9;
 }
